--- a/nextflow.config
+++ b/nextflow.config
@@ -301,6 +301,18 @@ process
         cpus = 1
         memory = '4 GB'   
     }
+    withName: unknown_search_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: unknown_search_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
     withName: mqc_figs
     {
         time =  '15m'
