--- a/nextflow.config
+++ b/nextflow.config
@@ -67,6 +67,9 @@ params
     // Whether do blank subtraction or not
     bs = "1"
 
+    // Whether do unknown search or not
+    unknown_search = "0"
+
     // Use singularity?
     container = "Docker"
 
