--- a/nextflow.config
+++ b/nextflow.config
@@ -68,7 +68,7 @@ params
     bs = "1"
 
     // Whether do unknown search or not
-    unknown_search = "0"
+    unknown_search = "1"
 
     // Use singularity?
     container = "Docker"
@@ -87,8 +87,8 @@ params
     mzmine_dir = "MZmine-2.53-Linux/"
 
     // Change the following file location (customized library for matching metabolites) to the location on your machine
-    pos_library = "Positive_Garrett_MetaboliteStd_Library_RP_edited01152019JG.csv"
-    neg_library = "Negative_Garrett_MetaboliteStd_Library_RP_edited01152019JG.csv"
+    pos_library = "positive_library.csv"
+    neg_library = "negative_library.csv"
 
     pos_config = "pos_config.xml"
     neg_config = "neg_config.xml"
