add dependency information outputs and config folder

--- a/nextflow.config
+++ b/nextflow.config
@@ -146,6 +146,13 @@ params
     NEG_Rdata_csv_path = "milk_data_neg_ph.csv"
     NEG_Rdesign_path = "milk_design_neg_ph.Rdata"
 
+    // location of MZmine-2.53 config files
+    pos_config = "./config/mzmine_pos_config.xml"
+    neg_config = "./config/mzmine_neg_config.xml"
+
+    // outputs for dependency information
+    dependencies = "dependencies.txt"
+
     // outputs for blank_subtraction
     pos_data_withbg = "pos_data_after_blank_subtraction.csv"
     neg_data_withbg = "neg_data_after_blank_subtraction.csv"
@@ -250,13 +257,6 @@ process
         time =  '15m'
         cpus = 1
         memory = '4 GB'  
-    }
-    withName: batchfile_generation_mzmine
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'
-//        jobName = "batchfile_generation_mzmine"     
     }
     withName: pos_peakDetection_mzmine
     {
