update sample results, add pathway analysis for negative data

--- a/nextflow.config
+++ b/nextflow.config
@@ -226,18 +226,22 @@ params
 
     // regarding mummichog
     python_mummichog_input_prepare = "./rump/mummichog_input_prepare.py"
-    data_pos_nobg_group1_mummichog = "data_pos_nobg_group1_mummichog.txt"
-    data_pos_nobg_group1_mummichog_out = "data_pos_group1_before_blank_subtraction"
-    data_pos_nobg_group2_mummichog = "data_pos_nobg_group2_mummichog.txt"
-    data_pos_nobg_group2_mummichog_out = "data_pos_group2_before_blank_subtraction"
+//    data_pos_nobg_group1_mummichog = "data_pos_nobg_group1_mummichog.txt"
+//    data_pos_nobg_group1_mummichog_out = "data_pos_group1_before_blank_subtraction"
+//    data_pos_nobg_group2_mummichog = "data_pos_nobg_group2_mummichog.txt"
+//    data_pos_nobg_group2_mummichog_out = "data_pos_group2_before_blank_subtraction"
     data_pos_nobg_both_mummichog = "data_pos_nobg_both_mummichog.txt"
     data_pos_nobg_both_mummichog_out = "data_pos_both_before_blank_subtraction"
-    data_pos_withbg_group1_mummichog = "data_pos_withbg_group1_mummichog.txt"
-    data_pos_withbg_group1_mummichog_out = "data_pos_group1_after_blank_subtraction"
-    data_pos_withbg_group2_mummichog = "data_pos_withbg_group2_mummichog.txt"
-    data_pos_withbg_group2_mummichog_out = "data_pos_group2_after_blank_subtraction"
+//    data_pos_withbg_group1_mummichog = "data_pos_withbg_group1_mummichog.txt"
+//    data_pos_withbg_group1_mummichog_out = "data_pos_group1_after_blank_subtraction"
+//    data_pos_withbg_group2_mummichog = "data_pos_withbg_group2_mummichog.txt"
+//    data_pos_withbg_group2_mummichog_out = "data_pos_group2_after_blank_subtraction"
     data_pos_withbg_both_mummichog = "data_pos_withbg_both_mummichog.txt"
     data_pos_withbg_both_mummichog_out = "data_pos_both_after_blank_subtraction"
+    data_neg_nobg_both_mummichog = "data_neg_nobg_both_mummichog.txt"
+    data_neg_nobg_both_mummichog_out = "data_neg_both_before_blank_subtraction"
+    data_neg_withbg_both_mummichog = "data_neg_withbg_both_mummichog.txt"
+    data_neg_withbg_both_mummichog_out = "data_neg_both_after_blank_subtraction"
     cutoff = 0.05
 
 }
