update basic workflow information output following nf-core instruction

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ manifest {
     homePage = 'https://github.com/lemaslab/RUMP'
     description = 'RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
     mainScript = 'main.nf'
-    version = '0.0.0'
+    version = '1.0.0'
 }
 
 trace 
@@ -64,6 +64,10 @@ workflow.onError = {
 
 params 
 {
+    // workflow information
+    name = "RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline"
+    input = "mzXML files"
+
     // Whether do blank subtraction or not
     bs = "1"
 
@@ -72,12 +76,6 @@ params
 
     // Use singularity?
     container = "Docker"
-
-    // Change the following folder location (positive samples) to the location on your machine
-    input_dir_pos = "data/POS/"  
-
-    // Change the following folder location (negative samples) to the location on your machine
-    input_dir_neg = "data/NEG/"
 
     // Output help information?
     version = null
@@ -129,6 +127,9 @@ params
     experiments_info = "./rump/software_descriptions_mqc.txt"
     mqc_config = "./rump/multiqc_config.yaml"
 
+    // output dir
+    outdir = "./results"
+
     // outputs for mqc_data_info
     pos_data_info_mqc = "pos_data_info_mqc.yaml"
     neg_data_info_mqc = "neg_data_info_mqc.yaml"
@@ -136,9 +137,9 @@ params
 
     // location of data and design files
     POS_data_path = "pos_data_extracted.csv"
-    POS_design_path = "./data/pos_design.csv"
+//    POS_design_path = "./data/pos_design.csv"
     NEG_data_path = "neg_data_extracted.csv"
-    NEG_design_path = "./data/neg_design.csv"
+//    NEG_design_path = "./data/neg_design.csv"
     POS_Rdata_path = "milk_data_pos_ph.Rdata"
     POS_Rdata_csv_path = "milk_data_pos_ph.csv"
     POS_Rdesign_path = "milk_design_pos_ph.Rdata"
@@ -226,16 +227,8 @@ params
 
     // regarding mummichog
     python_mummichog_input_prepare = "./rump/mummichog_input_prepare.py"
-//    data_pos_nobg_group1_mummichog = "data_pos_nobg_group1_mummichog.txt"
-//    data_pos_nobg_group1_mummichog_out = "data_pos_group1_before_blank_subtraction"
-//    data_pos_nobg_group2_mummichog = "data_pos_nobg_group2_mummichog.txt"
-//    data_pos_nobg_group2_mummichog_out = "data_pos_group2_before_blank_subtraction"
     data_pos_nobg_both_mummichog = "data_pos_nobg_both_mummichog.txt"
     data_pos_nobg_both_mummichog_out = "data_pos_both_before_blank_subtraction"
-//    data_pos_withbg_group1_mummichog = "data_pos_withbg_group1_mummichog.txt"
-//    data_pos_withbg_group1_mummichog_out = "data_pos_group1_after_blank_subtraction"
-//    data_pos_withbg_group2_mummichog = "data_pos_withbg_group2_mummichog.txt"
-//    data_pos_withbg_group2_mummichog_out = "data_pos_group2_after_blank_subtraction"
     data_pos_withbg_both_mummichog = "data_pos_withbg_both_mummichog.txt"
     data_pos_withbg_both_mummichog_out = "data_pos_both_after_blank_subtraction"
     data_neg_nobg_both_mummichog = "data_neg_nobg_both_mummichog.txt"
@@ -244,6 +237,33 @@ params
     data_neg_withbg_both_mummichog_out = "data_neg_both_after_blank_subtraction"
     cutoff = 0.05
 
+    // authors' profiles
+    config_profile_description = false
+    config_profile_contact = false
+    config_profile_url = false
+    email = false
+    email_on_fail = false
+
+}
+
+process.container = 'xinsongdu/lemaslab_rump:latest'
+
+profiles {
+  docker {
+    docker.enabled = true
+    docker.runOptions = '-u \$(id -u):\$(id -g)'
+    includeConfig 'conf/local.config'
+  }
+  singularity {
+    singularity.enabled = true
+    singularity.autoMounts = true
+    includeConfig 'conf/HiPerGator.config'
+    singularity.cacheDir = "/blue/djlemas/share/containers/"
+  }
+  test { 
+    includeConfig 'conf/test.config'
+    docker.enabled = true
+  }
 }
 
 process 
