adjust content based on nf-core coding practice

--- a/conf/HiPerGator.config
+++ b/conf/HiPerGator.config
@@ -39,6 +39,23 @@ params
 
 process 
 {
+//    executor = 'slurm'  
+    cpus = { check_max( 20 * task.attempt, 'cpus' ) }
+    memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+    time = { check_max( 24.h * task.attempt, 'time' ) }
+
+    withName: input_check
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'  
+    }
+    withName: mqc_data_info
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '3 GB'  
+    }
     withName: pos_peakDetection_mzmine
     {
         time =  '600m'
@@ -50,5 +67,83 @@ process
         time =  '600m'
         cpus = 10
         memory = '100 GB'  
+    }
+    withName: blank_subtraction
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: pca_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: pca_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: venn_diagram_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: venn_diagram_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: bar_plot_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: bar_plot_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: unknown_search_nobg
+    {
+        time =  '1800m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: unknown_search_withbg
+    {
+        time =  '1800m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: mqc_figs
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: report_generator
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: mummichog_report_nobg
+    {
+        time = '15m'
+        cpus = 1
+        memory = '4GB'
+    }
+    withName: mummichog_report_withbg
+    {
+        time = '15m'
+        cpus = 1
+        memory = '4GB'
     }
 }
