--- a/conf/test.config
+++ b/conf/test.config
@@ -32,23 +32,118 @@ params
     pos_library = "positive_library.csv"
     neg_library = "negative_library.csv"
 
-    max_cpus = 2
-    max_memory = 14.GB
-    max_time = 1.h
+    max_cpus = 6
+    max_emory = 14.GB
+    max_time = 12.h
 }
 
 process 
 {
+//    executor = 'slurm'  
+    cpus = { check_max( 6 * task.attempt, 'cpus' ) }
+    memory = { check_max( 14.GB * task.attempt, 'memory' ) }
+    time = { check_max( 12.h * task.attempt, 'time' ) }
+
+    withName: input_check
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '2 GB'  
+    }
+    withName: mqc_data_info
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '2 GB'  
+    }
     withName: pos_peakDetection_mzmine
     {
-        time =  '600m'
-        cpus = 2
+        time =  '300m'
+        cpus = 3
         memory = '7 GB'  
     }
     withName: neg_peakDetection_mzmine
     {
-        time =  '600m'
-        cpus = 2
+        time =  '300m'
+        cpus = 3
         memory = '7 GB'  
+    }
+    withName: blank_subtraction
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: pca_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: pca_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: venn_diagram_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: venn_diagram_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: bar_plot_nobg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: bar_plot_withbg
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: unknown_search_nobg
+    {
+        time =  '1800m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: unknown_search_withbg
+    {
+        time =  '1800m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: mqc_figs
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: report_generator
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'   
+    }
+    withName: mummichog_report_nobg
+    {
+        time = '15m'
+        cpus = 1
+        memory = '4GB'
+    }
+    withName: mummichog_report_withbg
+    {
+        time = '15m'
+        cpus = 1
+        memory = '4GB'
     }
 }
