--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /**
-    RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline
-    Description : This file in the configuration of RUMP, including resource allocation and parameters information
+    rump: A Reproducible Untargeted Metabolomics Data Processing Pipeline
+    Description : This file in the configuration of rump, including resource allocation and parameters information
     Copyright   : (C) LemasLab
     Author      : Xinsong Du
     License     : GNU GPL-v3.0 License
@@ -20,31 +20,17 @@
     
     For any bugs or problems found, please contact us at
     - xinsongdu@ufl.edu, manfiol@ufl.edu, djlemas@ufl.edu; 
-    - https://github.com/lemaslab/RUMP
+    - https://github.com/lemaslab/rump
 */
 
 manifest {
-    homePage = 'https://github.com/lemaslab/RUMP'
-    description = 'RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline'
-    mainScript = 'main.nf'
-    version = '1.0.0'
-}
-
-trace 
-{
-    enabled = true
-    fields = 'task_id, name, status, exit, module, submit, start, complete, duration, realtime, %cpu, rss, vmem, peak_rss, peak_vmem'
-}
-
-report
-{
-    enabled = true
-    file = 'nextflow_report.html'
-}
-
-timeline 
-{
-    enabled = true
+  name = 'nf-core/rump'
+  author = 'Xinsong Du, Dominick Lemas'
+  homePage = 'https://github.com/nf-core/rump'
+  description = 'A Reproducible Untargeted Metabolomics Data Processing Pipeline'
+  mainScript = 'main.nf'
+  nextflowVersion = '>=20.04.0'
+  version = '1.0dev'
 }
 
 workflow.onComplete = {
@@ -55,7 +41,6 @@ workflow.onComplete = {
     file.write("$workflow.success")
 }
 
-
 workflow.onError = {
     println "Oops .. something when wrong, exit status: $workflow.exitStatus\nWriting error message to file ./logs/error.txt"
     File file = new File("./logs/error.txt")
@@ -65,7 +50,7 @@ workflow.onError = {
 params 
 {
     // workflow information
-    name = "RUMP: A Reproducible Untargeted Metabolomics Data Processing Pipeline"
+    name = "rump: A Reproducible Untargeted Metabolomics Data Processing Pipeline"
     input = "mzXML files"
 
     // Whether do blank subtraction or not
@@ -74,11 +59,11 @@ params
     // Whether do unknown search or not
     unknown_search = "0"
 
-    // Use singularity?
-    container = "Docker"
+    // Use singularity or docker (depracated, replaced by process.container)
+    // container = "Docker"
 
-    // Output help information?
-    version = null
+    // Output help information
+//    version = "1.0dev"
     help = null
 
     // Location of MZmine
@@ -244,15 +229,44 @@ params
     email = false
     email_on_fail = false
 
+    // nf-core variables
+    tracedir = "${params.outdir}/pipeline_info"
+
+    // Defaults only, expecting to be overwritten
+    max_memory = 128.GB
+    max_cpus = 16
+    max_time = 240.h
+
+}
+
+timeline {
+  enabled = true
+  file = "${params.tracedir}/execution_timeline.html"
+}
+report {
+  enabled = true
+  file = "${params.tracedir}/execution_report.html"
+}
+trace {
+  enabled = true
+  file = "${params.tracedir}/execution_trace.txt"
+}
+dag {
+  enabled = true
+  file = "${params.tracedir}/pipeline_dag.svg"
 }
 
 process.container = 'xinsongdu/lemaslab_rump:latest'
+
+// Load base.config by default for all pipelines
+includeConfig 'conf/base.config'
+
 
 profiles {
   docker {
     docker.enabled = true
     docker.runOptions = '-u \$(id -u):\$(id -g)'
-    includeConfig 'conf/local.config'
+    includeConfig 'conf/base.config'
   }
   singularity {
     singularity.enabled = true
@@ -260,116 +274,41 @@ profiles {
     includeConfig 'conf/HiPerGator.config'
     singularity.cacheDir = "/blue/djlemas/share/containers/"
   }
-  test { 
+  test_docker { 
     includeConfig 'conf/test.config'
     docker.enabled = true
   }
 }
 
-process 
-{
-//    executor = 'slurm'    
-
-    withName: input_check
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'  
+// Function to ensure that resource requirements don't go beyond
+// a maximum limit
+def check_max(obj, type) {
+  if (type == 'memory') {
+    try {
+      if (obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
+        return params.max_memory as nextflow.util.MemoryUnit
+      else
+        return obj
+    } catch (all) {
+      println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
+      return obj
     }
-    withName: mqc_data_info
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '3 GB'  
+  } else if (type == 'time') {
+    try {
+      if (obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
+        return params.max_time as nextflow.util.Duration
+      else
+        return obj
+    } catch (all) {
+      println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
+      return obj
     }
-    withName: pos_peakDetection_mzmine
-    {
-        time =  '1800m'
-        cpus = 2
-        memory = '3 GB'  
+  } else if (type == 'cpus') {
+    try {
+      return Math.min( obj, params.max_cpus as int )
+    } catch (all) {
+      println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
+      return obj
     }
-    withName: neg_peakDetection_mzmine
-    {
-        time =  '1800m'
-        cpus = 2
-        memory = '3 GB'  
-    }
-    withName: blank_subtraction
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: pca_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: pca_withbg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: venn_diagram_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: venn_diagram_withbg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: bar_plot_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: bar_plot_withbg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: unknown_search_nobg
-    {
-        time =  '1800m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: unknown_search_withbg
-    {
-        time =  '1800m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: mqc_figs
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: report_generator
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: mummichog_report_nobg
-    {
-        time = '15m'
-        cpus = 1
-        memory = '4GB'
-    }
-    withName: mummichog_report_withbg
-    {
-        time = '15m'
-        cpus = 1
-        memory = '4GB'
-    }
+  }
 }
