--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -59,7 +59,7 @@ jobs:
           GITHUB_COMMENTS_URL: ${{ github.event.pull_request.comments_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_PR_COMMIT: ${{ github.event.pull_request.head.sha }}
-        run: nf-core lint
+        run: nf-core lint ${GITHUB_WORKSPACE}
 
       - name: Save PR number
         if: ${{ always() }}
