debug config file

--- a/nextflow.config
+++ b/nextflow.config
@@ -274,7 +274,7 @@ profiles {
     includeConfig 'conf/HiPerGator.config'
     singularity.cacheDir = "/blue/djlemas/share/containers/"
   }
-  test_docker { 
+  test { 
     includeConfig 'conf/test.config'
     docker.enabled = true
   }
