--- a/nextflow.config
+++ b/nextflow.config
@@ -256,7 +256,7 @@ dag {
   file = "${params.tracedir}/pipeline_dag.svg"
 }
 
-process.container = 'xinsongdu/lemaslab_rump:dev'
+process.container = 'xinsongdu/lemaslab_rump'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
