add nf-core badges to README and update resource allocation for testing

--- a/conf/base.config
+++ b/conf/base.config
@@ -59,15 +59,15 @@ process
     }
     withName: pos_peakDetection_mzmine
     {
-        time =  '600m'
-        cpus = 2
-        memory = '6 GB'  
+        cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory = { check_max( 6.GB * task.attempt, 'memory' ) }
+        time = { check_max( 24.h * task.attempt, 'time' ) }
     }
     withName: neg_peakDetection_mzmine
     {
-        time =  '600m'
-        cpus = 2
-        memory = '6 GB'  
+        cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory = { check_max( 6.GB * task.attempt, 'memory' ) }
+        time = { check_max( 24.h * task.attempt, 'time' ) }
     }
     withName: blank_subtraction
     {
