--- a/conf/HiPerGator.config
+++ b/conf/HiPerGator.config
@@ -58,15 +58,15 @@ process
     }
     withName: pos_peakDetection_mzmine
     {
-        time =  '600m'
-        cpus = 10
-        memory = '100 GB'  
+        cpus = { check_max( 10 * task.attempt, 'cpus' ) }
+        memory = { check_max( 100.GB * task.attempt, 'memory' ) }
+        time = { check_max( 24.h * task.attempt, 'time' ) }
     }
     withName: neg_peakDetection_mzmine
     {
-        time =  '600m'
-        cpus = 10
-        memory = '100 GB'  
+        cpus = { check_max( 10 * task.attempt, 'cpus' ) }
+        memory = { check_max( 100.GB * task.attempt, 'memory' ) }
+        time = { check_max( 24.h * task.attempt, 'time' ) }
     }
     withName: blank_subtraction
     {
