--- a/conf/test.config
+++ b/conf/test.config
@@ -58,15 +58,15 @@ process
     }
     withName: pos_peakDetection_mzmine
     {
-        time =  '300m'
-        cpus = 2
-        memory = '6 GB'  
+        cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory = { check_max( 6.GB * task.attempt, 'memory' ) }
+        time = { check_max( 24.h * task.attempt, 'time' ) }
     }
     withName: neg_peakDetection_mzmine
     {
-        time =  '300m'
-        cpus = 2
-        memory = '6 GB'  
+        cpus = { check_max( 2 * task.attempt, 'cpus' ) }
+        memory = { check_max( 6.GB * task.attempt, 'memory' ) }
+        time = { check_max( 24.h * task.attempt, 'time' ) }
     }
     withName: blank_subtraction
     {
