resolve dependency conflict between multiqc and mummichog

--- a/conf/test.config
+++ b/conf/test.config
@@ -25,125 +25,15 @@
 
 params
 {
-    input_dir_pos = "functional_test/sample_data/POS/"  
-    input_dir_neg = "functional_test/sample_data/NEG"
-    POS_design_path = "functional_test/sample_data/pos_design.csv"
-    NEG_design_path = "functional_test/sample_data/neg_design.csv"
+    input_dir_pos = ".travis/data/POS/"  
+    input_dir_neg = ".travis/data/NEG"
+    POS_design_path = ".travis/pos_design.csv"
+    NEG_design_path = ".travis/neg_design.csv"
     pos_library = "positive_library.csv"
     neg_library = "negative_library.csv"
+    cutoff = 0.2
 
     max_cpus = 6
     max_emory = 6.GB
     max_time = 12.h
-}
-
-process 
-{
-//    executor = 'slurm'  
-    cpus = { check_max( 2 * task.attempt, 'cpus' ) }
-    memory = { check_max( 6.GB * task.attempt, 'memory' ) }
-    time = { check_max( 12.h * task.attempt, 'time' ) }
-
-    withName: input_check
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '2 GB'  
-    }
-    withName: mqc_data_info
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '2 GB'  
-    }
-    withName: pos_peakDetection_mzmine
-    {
-        cpus = { check_max( 2 * task.attempt, 'cpus' ) }
-        memory = { check_max( 6.GB * task.attempt, 'memory' ) }
-        time = { check_max( 24.h * task.attempt, 'time' ) }
-    }
-    withName: neg_peakDetection_mzmine
-    {
-        cpus = { check_max( 2 * task.attempt, 'cpus' ) }
-        memory = { check_max( 6.GB * task.attempt, 'memory' ) }
-        time = { check_max( 24.h * task.attempt, 'time' ) }
-    }
-    withName: blank_subtraction
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: pca_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: pca_withbg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: venn_diagram_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: venn_diagram_withbg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: bar_plot_nobg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: bar_plot_withbg
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: unknown_search_nobg
-    {
-        time =  '1800m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: unknown_search_withbg
-    {
-        time =  '1800m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: mqc_figs
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: report_generator
-    {
-        time =  '15m'
-        cpus = 1
-        memory = '4 GB'   
-    }
-    withName: mummichog_report_nobg
-    {
-        time = '15m'
-        cpus = 1
-        memory = '4GB'
-    }
-    withName: mummichog_report_withbg
-    {
-        time = '15m'
-        cpus = 1
-        memory = '4GB'
-    }
 }
