--- a/nextflow.config
+++ b/nextflow.config
@@ -257,6 +257,7 @@ dag {
 }
 
 process.container = 'xinsongdu/lemaslab_rump'
+process.containerOptions = "--user root"
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
