add process to automate mzmine installation

--- a/conf/base.config
+++ b/conf/base.config
@@ -45,6 +45,13 @@ process
     memory = { check_max( 5.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
 
+    
+    withName: mzmine_download
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'  
+    }
     withName: input_check
     {
         time =  '15m'
