--- a/conf/HiPerGator.config
+++ b/conf/HiPerGator.config
@@ -33,10 +33,16 @@ params
 process 
 {
 //    executor = 'slurm'  
-    cpus = { check_max( 20 * task.attempt, 'cpus' ) }
-    memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+    cpus = { check_max( 10 * task.attempt, 'cpus' ) }
+    memory = { check_max( 100.GB * task.attempt, 'memory' ) }
     time = { check_max( 24.h * task.attempt, 'time' ) }
 
+    withName: mzmine_download
+    {
+        time =  '15m'
+        cpus = 1
+        memory = '4 GB'  
+    }
     withName: input_check
     {
         time =  '15m'
