--- a/nextflow.config
+++ b/nextflow.config
@@ -270,6 +270,7 @@ includeConfig 'conf/base.config'
 
 
 profiles {
+  conda {process.conda = "$projectDir/environment.yml"}
   docker {
     docker.enabled = true
     docker.runOptions = '-u \$(id -u):\$(id -g)'
